--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,31 @@ test {
     useJUnitPlatform()
 }
 
-String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'tkgregory'
+String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'falug'
 String imageName = "${dockerHubUsernameProperty}/spring-boot-api-example:$version"
+
+Process process
+if (DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
+    process = "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock alpine stat -c %g /var/run/docker.sock".execute()
+} else if (DefaultNativePlatform.getCurrentOperatingSystem().isLinux()) {
+    process = "stat -c %g /var/run/docker.sock".execute()
+} else {
+    throw new GradleException("Unsupported operating system. No way to find group of /var/run/docker.sock.")
+}
+def out = new ByteArrayOutputStream()
+process.waitForProcessOutput(out, System.err)
+String dockerSockGroupId = out.toString().trim()
+String extraPrefix = DefaultNativePlatform.getCurrentOperatingSystem().isWindows() ? '/' : ''
+dockerRun {
+    name "${project.name}"
+    image "${project.name}:${project.version}"
+    ports '8080:8080'
+    clean true
+    daemonize false
+    arguments '-v', "$extraPrefix/var/run/docker.sock:/var/run/docker.sock", '--group-add', dockerSockGroupId
+}
+
+
 
 docker {
     name imageName
@@ -43,12 +66,12 @@ docker {
     buildArgs([JAR_FILE: bootJar.archiveFileName.get()])
 }
 
-dockerRun {
-    name project.name
-    image imageName
-    ports '8080:8080'
-    clean true
-}
+// dockerRun {
+//     name project.name
+//     image imageName
+//     ports '8080:8080'
+//     clean true
+// }
 
 aws {
     region = findProperty('region') ?: 'us-east-1'
